--- a/css/dark.css
+++ b/css/dark.css
@@ -14,3 +14,19 @@
 .darktext{
     color: rgb(151, 151, 151);
 }
+
+
+
+.darkp{
+    color: rgb(151, 151, 151);
+  }
+
+  .darkprojectname{
+    color: wheat;
+  }
+
+  .darkline{
+    background-color: #ff4e00;
+    background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
+    
+  }
