--- a/css/index.css
+++ b/css/index.css
@@ -5,83 +5,69 @@
 }
 
 .body {
+  height: auto;
   background-color: #ff4e00;
   background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
 }
 
-.menu-button {
-  display: none;
-  width: 47px;
-  height: 47px;
-  background: transparent;
-  border: none;
-  outline: none;
-}
-
-
-@media screen and (max-width: 720px) {
-   .menu-button{
-       display: block;
-   }
-   .onheader
-   {
-       display: none !important;
-   }
-  }
-
-.menu-img {
-  width: 40px;
-  height: 40px;
-}
-
-.menu-img:active {
-  width: 47px;
-  height: 47px;
-}
-
-
-
-.hidden-menu
-{
-    height: 0vh;
-    opacity: 0;
-    pointer-events: none;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-
-    justify-content: space-around;
-    align-items: center;
-    transition: all 200ms ease-in-out;
-}
-
-.not-hidden-menu{
-    opacity: 1;
-    pointer-events: all;
-    height: 10vh;
-}
-
-.logo{
-  width: auto;
-  /* margin-right: auto; */
-}
-
-.header-items
-{
-  width: 70vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.item-project
-{
-  list-style: none;
-  text-decoration: none;
-}
-
-
 a {
   color: black;
   text-decoration: none;
+}
+.intro {
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.projects {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+.project {
+  display: block;
+  padding: 10px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-decoration: none;
+  transition-duration: 300ms;
+  transition-property: all;
+  font-size: 30px;
+  border-radius: 20px;
+}
+
+.project:hover + .line {
+  transform: translateX(+150%);
+
+}
+.line {
+  width: 50%;
+  position: absolute;
+  height: 5px;
+  background-color: #7f5a83;
+  background-image: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%);
+  left: -50%;
+  transition-duration: 300ms;
+  transition-property: transform;
+}
+
+
+p{
+  font-size: larger;
+}
+#contactme {
+  display: inline-block;
+}
+#itemlists {
+  display: inline-block;
+}
+#logo {
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  transition-property: filter;
+  transition-duration: 200ms;
+}
+
+#logo:hover {
+  filter: drop-shadow(8px 8px 5px gray);
 }
