--- a/css/header.css
+++ b/css/header.css
@@ -38,6 +38,9 @@
    .header{
      padding: 0;
    }
+   .nav-bar{
+     padding: 0 10;
+   }
   }
 
 .menu-img {
@@ -60,7 +63,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-content: center;
+    justify-content: space-between;
     align-items: center;
     transition: all 200ms ease-in-out;
     z-index: 99;
@@ -88,5 +92,6 @@
 .item-project
 {
   list-style: none;
+  font-size: large;
   text-decoration: none;
 }
