--- a/css/sections.css
+++ b/css/sections.css
@@ -1,30 +1,29 @@
-.section
-{
-    padding: 0vw 5vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    width: 100%;
-    position: relative;
-
+.section {
+  padding: 0vw 5vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  position: relative;
 }
-.fp-slidesNav.fp-bottom{
-    bottom: 117px;
+.fp-slidesNav.fp-bottom {
+  bottom: 117px;
 }
 
-.fp-slidesNav{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    left: 1 !important;
-    right: 1 !important;
+.fp-slidesNav {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  left: 1 !important;
+  right: 1 !important;
 }
 
-#fullpage{
-    width: auto;
-    /* padding-top: 20vh !important;
+
+#fullpage {
+  width: auto;
+  /* padding-top: 20vh !important;
     padding-bottom: 20vh !important; */
 }
 
@@ -39,29 +38,26 @@
 } */
 
 @media screen and (max-width: 720px) {
-    .section{
-        padding-top: 20vh !important;
-        padding-bottom: 20vh !important;
-    }
-    
+  .section {
+    padding-top: 20vh !important;
+    padding-bottom: 20vh !important;
+  }
 }
 
-.fp-prev{
-    border-color: transparent rgba(255, 255, 255, 0.651) transparent transparent !important;
+.fp-prev {
+  border-color: transparent rgba(255, 255, 255, 0.651) transparent transparent !important;
 }
 
-.fp-next{
-    border-color: transparent transparent transparent rgba(255, 255, 255, 0.651) !important;
+.fp-next {
+  border-color: transparent transparent transparent rgba(255, 255, 255, 0.651) !important;
 }
 
-.link-and-line
-{
-   width: 100%;
+.link-and-line {
+  width: 100%;
 }
 
-
-.contact{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.contact {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
