--- a/css/dark.css
+++ b/css/dark.css
@@ -28,9 +28,7 @@
   }
 
   .darkline{
-    background-color: #ff4e00;
-    background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
-    
+    background-color: #a984ad; 
   }
 
 
