--- a/css/sections.css
+++ b/css/sections.css
@@ -32,6 +32,7 @@
   font-size: larger;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 2;
+  max-width: 1000px;
 }
 /* .s3{
     padding: 0 50;
