--- a/css/sections.css
+++ b/css/sections.css
@@ -23,8 +23,6 @@
 
 #fullpage {
   width: auto;
-  /* padding-top: 20vh !important;
-    padding-bottom: 20vh !important; */
 }
 
 .fp-tableCell {
@@ -32,11 +30,8 @@
   font-size: larger;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 2;
-  max-width: 1000px;
+  width: auto;
 }
-/* .s3{
-    padding: 0 50;
-} */
 
 @media screen and (max-width: 720px) {
   .section {
@@ -46,11 +41,19 @@
 }
 
 .fp-prev {
-  border-color: transparent rgba(255, 255, 255, 0.651) transparent transparent !important;
+  border: transparent;
+  background-image: url(/Npf/img/left.svg);
+  background-size: cover;
+  width: 40px !important;
+  height: 40px;
 }
 
 .fp-next {
-  border-color: transparent transparent transparent rgba(255, 255, 255, 0.651) !important;
+  border: transparent;
+  background-image: url(/Npf/img/right.svg);
+  background-size: cover;
+  width: 40px;
+  height: 40px;
 }
 
 .link-and-line {
@@ -61,4 +64,10 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+
+.s1{
+  display: flex;
+  justify-content: center;
 }
