--- a/css/glass.css
+++ b/css/glass.css
@@ -5,6 +5,10 @@
 .container{
     max-width: 1100px;
 }
+
+
+
+
 .cent{
     width: 100%;
     display: flex;
@@ -17,6 +21,6 @@
 .glass{
     padding: 0 50px;
     border-radius: 20px;
-    backdrop-filter: blur(1rem);
+    backdrop-filter: blur(10px) !important;
     background-color: #f0652498;
 }
