--- a/css/index.css
+++ b/css/index.css
@@ -60,13 +60,7 @@ p {
 #itemlists {
   display: inline-block;
 }
-.logo {
-  width: 50px;
-  height: 50px;
-  margin: 10px;
-  transition-property: filter;
-  transition-duration: 200ms;
-}
+
 
 
 .tool {
@@ -129,4 +123,8 @@ p {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+}
+#fullpage
+{
+  height: 100vh;
 }
