--- a/css/sections.css
+++ b/css/sections.css
@@ -31,6 +31,10 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 2;
   width: auto;
+  display: flex;
+flex-direction: column;
+align-content: space-between;
+align-items: center;
 }
 
 @media screen and (max-width: 720px) {
