--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,8 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
-  backdrop-filter: blur(2px);
+  background-color: rgba(203, 255, 238, 0.144);
+  backdrop-filter: blur(10px);
 }
 
 .nav-bar {
@@ -34,65 +35,6 @@ p{
   font-size: medium;
 }
 
-@media screen and (max-width: 1020px) {
-  p {
-    font-size: medium;
-  }
-  .project {
-    font-size: large;
-  }
-  .intro {
-    font-size: large;
-  }
-  .projectimg{
-    width: 70px;
-    height: 70px;
-  }
-}
-
-@media screen and (max-width: 720px) {
-  .languages{
-    padding-top: 0;
-  }
-  .projectimg{
-    width: 50px;
-    height: 50px;
-  }
-  .menu-button {
-    display: block;
-  }
-  .onheader {
-    display: none !important;
-  }
-  .header {
-    padding: 0;
-  }
-  .nav-bar {
-    padding: 0 10;
-  }
-  p {
-    font-size: medium;
-  }
-  .project {
-    font-size: large;
-  }
-  .intro {
-    font-size: large;
-  }
-}
-
-@media screen and (max-width: 520px) {
-  p {
-    font-size: small;
-  }
-  .project {
-    font-size: medium;
-  }
-  .projectimg{
-    width: 40px;
-    height: 40px;
-  }
-}
 
 .menu-img {
   width: 40px;
