--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,8 @@ a {
 .project {
   display: block;
   padding: 10px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
+  font-family: 'Orbitron', sans-serif;
   text-decoration: none;
   transition-duration: 300ms;
   transition-property: all;
@@ -57,6 +58,15 @@ p {
 }
 #contactme {
   width: auto;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.contactlogo{
+  padding: 0 !important;
 }
 #itemlists {
   display: inline-block;
