--- a/css/sections.css
+++ b/css/sections.css
@@ -7,6 +7,8 @@
   align-content: center;
   width: 100%;
   position: relative;
+  padding-top: 20vh !important;
+  padding-bottom: 20vh !important;
 }
 .fp-slidesNav.fp-bottom {
   bottom: 117px;
@@ -37,16 +39,11 @@ align-content: space-between;
 align-items: center;
 }
 
-@media screen and (max-width: 720px) {
-  .section {
-    padding-top: 20vh !important;
-    padding-bottom: 20vh !important;
-  }
-}
+
 
 .fp-prev {
   border: transparent;
-  background-image: url(/Npf/img/left.svg);
+  background-image: url(/img/left.svg);
   background-size: cover;
   width: 40px !important;
   height: 40px;
@@ -54,7 +51,7 @@ align-items: center;
 
 .fp-next {
   border: transparent;
-  background-image: url(/Npf/img/right.svg);
+  background-image: url(/img/right.svg);
   background-size: cover;
   width: 40px;
   height: 40px;
@@ -66,7 +63,8 @@ align-items: center;
 
 .contact {
   display: flex;
-  justify-content: space-evenly;
+  width: 100%;
+  justify-content: space-between;
   align-items: center;
 }
 
