--- a/css/darkmode-buttom.css
+++ b/css/darkmode-buttom.css
@@ -25,7 +25,7 @@
     .ball {
       background-color:transparent;
       background-size: 25px 25px;
-      background-image: url(/img/sun.png);
+      background-image: url(/Npf/img/sun.png);
       background-position: center;
       background-repeat: no-repeat;
       position: absolute;
@@ -47,7 +47,7 @@
 
     .right{
         left: 44px;
-        background-image: url(/img/moon.png);
+        background-image: url(/Npf/img/moon.png);
     }
 
 
