fixing small windows problm

--- a/css/glass.css
+++ b/css/glass.css
@@ -10,6 +10,7 @@
 
 
 .cent{
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -19,8 +20,12 @@
 
 
 .glass{
+    height: auto;
     padding: 0 50px;
     border-radius: 20px;
     backdrop-filter: blur(10px) !important;
     background-color: #f0652498;
+}
+.projects{
+    height: 70%;
 }
