--- a/css/media.css
+++ b/css/media.css
@@ -1,60 +1,71 @@
 @media screen and (max-width: 1020px) {
-    p {
-      font-size: medium;
-    }
-    .project {
-      font-size: large;
-    }
-    .intro {
-      font-size: large;
-    }
-    .projectimg{
-      width: 70px;
-      height: 70px;
-    }
+  p {
+    font-size: medium;
   }
-  
-  @media screen and (max-width: 720px) {
-    .languages{
-      padding-top: 0;
-    }
-    .projectimg{
-      width: 50px;
-      height: 50px;
-    }
-    .menu-button {
-      display: block;
-    }
-    .onheader {
-      display: none !important;
-    }
-    .header {
-      padding: 0;
-    }
-    .nav-bar {
-      padding: 0 10;
-    }
-    p {
-      font-size: medium;
-    }
-    .project {
-      font-size: large;
-    }
-    .intro {
-      font-size: large;
-    }
+  .project {
+    font-size: large;
   }
-  
-  @media screen and (max-width: 520px) {
-    p {
-      font-size: small;
-    }
-    .project {
-      font-size: medium;
-    }
-    .projectimg{
-      width: 40px;
-      height: 40px;
-    }
+  .intro {
+    font-size: large;
   }
-  
+  .projectimg {
+    width: 70px;
+    height: 70px;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .languages {
+    padding-top: 0;
+  }
+  .projectimg {
+    width: 50px;
+    height: 50px;
+  }
+  .menu-button {
+    display: block;
+  }
+  .onheader {
+    display: none !important;
+  }
+  .header {
+    padding: 0;
+  }
+  .nav-bar {
+    padding: 0 10;
+  }
+  p {
+    font-size: medium;
+  }
+  .project {
+    font-size: large;
+  }
+  .intro {
+    font-size: large;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  p {
+    font-size: small;
+  }
+  .project {
+    font-size: medium;
+  }
+  .projectimg {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .section {
+    padding: 0 !important;
+  }
+  #contactme{
+    height: 70%;
+  }
+  .cent{
+    align-items: unset;
+  }
+}
