--- a/css/index.css
+++ b/css/index.css
@@ -62,7 +62,7 @@ p {
   display: flex;
   align-items: center;
   align-content: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-direction: column;
 }
 .contactlogo{
