--- a/css/glass.css
+++ b/css/glass.css
@@ -23,7 +23,7 @@
     height: auto;
     padding: 0 50px;
     border-radius: 20px;
-    backdrop-filter: blur(10px) !important;
+    /* backdrop-filter: blur(10px) !important; */
     background-color: #f0652498;
 }
 .projects{
