--- a/css/header.css
+++ b/css/header.css
@@ -56,15 +56,18 @@ p{
   align-content: center;
   justify-content: space-evenly;
   align-items: center;
-  transition: all 200ms ease-in-out;
+  transition: all 300ms ease-out;
   z-index: 99;
+ 
 }
 
 .not-hidden-menu {
   opacity: 1;
+  position: absolute;
   pointer-events: all;
-  background-color: rgba(0, 0, 255, 0.11);
-  height: 100px;
+  height: 150px;
+  backdrop-filter: blur(20px);
+  background-color: rgba(202, 202, 202, 0.205);
 }
 
 .logo {
