adding some animation to imgs

--- a/css/sections.css
+++ b/css/sections.css
@@ -46,12 +46,14 @@ align-items: center;
   background-image: url(/Npf/img/left.svg);
   background-size: cover;
   width: 40px !important;
+  opacity: 0.5;
   height: 40px;
 }
 
 .fp-next {
   border: transparent;
   background-image: url(/Npf/img/right.svg);
+  opacity: 0.5;
   background-size: cover;
   width: 40px;
   height: 40px;
