--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,12 @@
   }
 }
 
+@media screen and (min-width: 720px) {
+  .projects{
+    height: 95%;
+  }
+}
+
 @media screen and (max-width: 720px) {
   .languages {
     padding-top: 0;
