--- a/css/header.css
+++ b/css/header.css
@@ -56,7 +56,7 @@ p{
   align-content: center;
   justify-content: space-evenly;
   align-items: center;
-  transition: all 300ms ease-out;
+  transition: height 0.3s ease;
   z-index: 99;
  
 }
@@ -66,8 +66,8 @@ p{
   position: absolute;
   pointer-events: all;
   height: 150px;
-  backdrop-filter: blur(20px);
-  background-color: rgba(202, 202, 202, 0.205);
+  backdrop-filter: blur(10px);
+  background-color: rgba(203, 255, 238, 0.144);
 }
 
 .logo {
@@ -78,7 +78,6 @@ p{
   align-items: center;
   transition-property: filter;
   transition-duration: 200ms;
-  /* margin-right: auto; */
 }
 
 .header-items {
