--- a/css/media.css
+++ b/css/media.css
@@ -78,9 +78,13 @@
     height: 77%;
     width: 70%;
   }
-  .fp-tableCell
+  .in
   {
     justify-content: center;
     padding-bottom: 100px;
+    width:100%;
+    height:100%;
+    display:flex;
+    align-items:center;
   }
 }
