--- a/css/media.css
+++ b/css/media.css
@@ -5,7 +5,7 @@
   .project {
     font-size: large;
   }
-  .intro {
+  .intro , .shadow {
     font-size: large;
   }
   .projectimg {
@@ -46,7 +46,7 @@
   .project {
     font-size: large;
   }
-  .intro {
+  .intro , .shadow {
     font-size: large;
   }
 }
@@ -56,7 +56,7 @@
     padding: 0 !important;
   }
   #fp-nav.fp-right {
-    opacity: 0;
+    display: none;
   }
   p {
     font-size: small;
@@ -77,6 +77,9 @@
   #contactme{
     height: 77%;
     width: 70%;
+  }
+  .glass{
+    border-radius: 0;
   }
   .in
   {
