--- a/css/sections.css
+++ b/css/sections.css
@@ -66,7 +66,7 @@ align-items: center;
   width: 100%;
 }
 .up{
-  transform: translateZ(4rem) !important;
+  transform: translateZ(30px) !important;
 }
 
 .contact {
