--- a/css/index.css
+++ b/css/index.css
@@ -11,21 +11,32 @@
   /* opacity: 0; */
   height: auto;
   background: none;
-  background-image: url(../img/s.svg);
+  /* background-image: url(../img/s.svg); */
   background-attachment: fixed;
   background-size: cover;
   /* display: none; */
 }
+
+#logoname , a
+{
+  color: #2b2e4a;
+}
+
+.fp-slidesNav{
+  display: none !important;
+}
+
+
 body.all-loaded {
   opacity: 1;
 }
 a {
-  color: black;
   text-decoration: none;
 }
-.intro {
+.intro , .shadow {
   text-align: center;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size:  1em;
 }
 
 .projects {
@@ -58,9 +69,11 @@ p {
   transform-style: preserve-3d;
   transform: perspective(2000px);
   border-radius: 20px;
-  width: 300px ;
-  height: 500px  ;
-  max-height: 500px ;
+  /* width: 300px ;
+  height: 500px  ; */
+  height: 60vh;
+  width: 25vw;
+  max-height: 700px ;
   max-width: 300px ;
   display: flex;
   align-items: center;
@@ -129,8 +142,7 @@ Padding-bottom: 1vh;
 
 
 .profile{
-  width: 160px;
-  height: 160px;
+  width: 100%;
   border-radius: 50%;
   box-shadow: 0px 0px 8px rgb(0, 0, 0);
   transition:  box-shadow 300ms ease-in-out;
