--- a/css/media.css
+++ b/css/media.css
@@ -5,8 +5,9 @@
   .project {
     font-size: large;
   }
-  .intro , .shadow {
-    font-size: large;
+  .intro,
+  .shadow {
+    /* font-size: 0.8em; */
   }
   .projectimg {
     width: 50px;
@@ -15,7 +16,7 @@
 }
 
 @media screen and (min-width: 720px) {
-  .projects{
+  .projects {
     height: 95%;
   }
 }
@@ -46,10 +47,11 @@
   .project {
     font-size: large;
   }
-  .intro , .shadow {
-    font-size: large;
+  .intro,
+  .shadow {
+    /* font-size: 0.8em; */
   }
-  .ml12{
+  .ml12 {
     font-size: 25px !important;
   }
 }
@@ -74,26 +76,25 @@
 }
 
 @media screen and (max-width: 576px) {
-  .tool{
+  .tool {
     padding: 0;
   }
   .section {
     padding: 0 !important;
   }
-  #contactme{
+  #contactme {
     height: 77%;
     width: 70%;
   }
-  .glass{
+  .glass {
     border-radius: 0;
   }
-  .in
-  {
+  .in {
     justify-content: center;
     padding-bottom: 100px;
-    width:100%;
-    height:100%;
-    display:flex;
-    align-items:center;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
   }
 }
